public/css/web/game.css
@import '../swiper/swiper.min.css';

.coming-soon {
    background: url(../../img/01-background.png) no-repeat center center;
    background-size: cover;
    position: relative;
    z-index: 2;
    min-height: 30vh;
}

.coming-soon aside {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: .2;
    transform: rotateY(180deg);
}

ul.teachers .teacher .team-icon figure img {
    object-fit: contain;
}

ul.teachers .image figure{
    width: calc(((100vw - 4rem) / 2) - 1rem);
    height: 16rem;
}

.slider-container{
    position: relative;
    /* height: 25rem; */
    height: calc(100vh - 4.6rem);
}

.slider-container header{
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    width: 100%;
}

.swiper-container, .swiper-wrapper, .swiper-slide{
    width: 100%;
    height: 100%;
}

.swiper-slide img{
    width: 100%;
    height: 100%;
    object-fit: cover;    
}

.swiper-container {
    width: 100%;
    height: 100%;
}

.swiper-slide {
    text-align: center;
    font-size: 18px;
    background: #fff;

    /* Center slide text vertically */
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}

.arrows {
    position: absolute;
    bottom: 0;
    right: 2rem;
    z-index: 2;
    margin-bottom: 2rem;
}

.arrows div {
    background-color: var(--color-white);
    opacity: .5;
    transition: 500ms;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 100vh;
}

.arrows div:hover {
    opacity: 1;
}

.arrows i {
    color: var(--color-black);
}

.slider-container .btn.btn-outline span {
    background: var(--color-one);
}

.teachers .teacher .teampro img {
    width: 100%;
    height: 2rem;
    object-fit: contain;
    object-position: left;
}

.video-section{
    background-image: url("/img/02-background.png");
    background-size: cover;
    background-position: top right;
    margin: 0;
}

.video-section header figure{
    width: 7rem;
    height: 100%;
}

.video-section header figure img{
    height: 100%;
    width: 500%;
    object-fit: contain;
}

.video-section .iframe-padrino, .banner-buscador .users-form-search, .profesores-destacados .teacher:hover{
    position: relative;
    border-radius: .25rem;
}

.video-section iframe{
    width: 100%;
    height: 15rem;
    border-radius: .25rem;
    /* border: 1px solid;
    border-image-source: linear-gradient(130deg, var(--color-five), var(--color-four));
    border-image-slice: 1; */
}


.video-section .iframe-padrino::before, .banner-buscador .users-form-search::before{
    width: calc(100% + 2px);
    height: calc(100% + 2px);
    border-radius: .25rem;
    content: "";
    position: absolute;
    top: -1px;
    left: -1px;
    background: linear-gradient(130deg , var(--color-five), var(--color-four));
    z-index: -1;
}

.video-section .services{
    /* display: flex; */
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.video-section .services .service{
    background: var(--color-black);
    border-radius: .25rem;
}

.video-section .services .service:hover h4{
    color: var(--color-four);
}

.video-section .service:last-of-type {
    margin-bottom: 0;
}

.video-section .service h4 {
    white-space: nowrap;
}

.video-section .service svg{
    display: inline-block;
    margin-left: .7rem;
    height: 47px;
    width: 35px;
}

.video-section .services .service:hover svg .cls-1{
    fill: var(--color-four);
}

/* buscador (usuarios) */

.banner-buscador{
    z-index: 2;
    background-color: var(--color-black);
    position: relative;
    color: #fff;
}

.banner-buscador::before{
    content: "";
    background: url(../../img/games/league-of-legends/01-background.png) no-repeat -70px top;
    background-size: cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: .2;
    transform: rotateY(180deg);
}

.banner-buscador::after{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -2;
    transform: rotateY(180deg);
    background-color: var(--color-black);
}

.users-form-search {
    /* border: 1px solid;
    border-image-source: -webkit-linear-gradient(130deg, var(--color-four), var(--color-five));
    border-image-slice: 1; */
    border-radius: .25rem;
    color: var(--color-white);
    background-color: var(--color-one);
}

.users-form-search input {
    flex-basis: 100%;
    background-color: transparent;
}

/* buscador profesores */

.profesores-destacados form {
    background-color: var(--color-black);
    border: none;
}

.profesores-destacados .users-form-search button {
    color: var(--color-five);
}

.submit-lupa svg{
    height: 20px;
}

.profesores-destacados input::placeholder{
    color: var(--color-grey);
}

.profesores-destacados{
    background-image: url("/img/02-background.png");
    background-size: cover;
    background-position: top right;
    margin: 0;
}

.teachers .teacher {
    position: relative;
    border-radius: .25rem;
    border: none;
}

.teachers .teacher > a {
    height: 100%;
    border-radius: .25rem;
}

.teachers .teacher:hover::before {
    content: '';
    position: absolute;
    top: -1px;
    left: -1px;
    width: calc(100% + 2px);
    height: calc(100% + 2px);
    background: linear-gradient(130deg, var(--color-five), var(--color-four));
    z-index: -1;
    border-radius: .25rem;
}

.teacher .payment .mobile-btn span {
    background: none;
}

/* fornite banner */

.aside {
    background: url('../../storage/web/01-banner.png') no-repeat center center;
    background-size: cover;
    height: 60vh;
    width: 100%;
}
/* ... */

